--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,9 @@
 }
 
 .sec2 #text_claim {
-  /*   width: 45%;
+  width: 45%;
   text-align: center;
-  vertical-align: middle; */
+  vertical-align: middle;
   color: #837870;
   font-size: 1.2em;
   line-height: 1.2;
@@ -28,22 +28,19 @@
 }
 
 .sec2 #threecards {
-  background-color: rgb(246, 156, 45);
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  column-gap: 7%;
+  /*   background-color: rgb(246, 156, 45); */
+  display: flex;
   margin-bottom: 2%;
 }
 
 .sec2 #threecards .small_card {
-  /*   display: flex;
-  flex-direction: column; */
-  /*   margin: 0px 10px; */
+  display: flex;
+  flex-direction: column;
+  margin: 0px 10px;
 }
 
 .sec2 #threecards .small_card .card_img {
-  width: auto;
+  width: 200px;
 }
 
 .sec2 #threecards .small_card .card_text {
@@ -51,9 +48,9 @@
   max-width: 180px;
   background-color: #837870;
   color: white;
-  /*   display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content: center; */
+  justify-content: center;
 }
 
 .sec2 button {
