--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
+/* CSS RESET */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
 /* Section 1 */
 
 
@@ -5,6 +26,57 @@
 
 
 /* Section 3 */
+.grid-container {
+    color: #FFFFFF;
+    display: grid;
+    grid-template-columns: auto auto;
+    
+    
+}
+.grid-item {
+    border: none;
+}
+
+#leftImgThree, #rightImgThree{
+    padding: 0;
+    
+
+}
+#firstImgThree {
+    margin-left: 30px;
+    
+}
+#secondImgThree {
+    margin-right: 30px;
+}
+#textThreeLeft, #textThreeRight {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    
+    
+   
+}
+#textThreeLeft {
+    background-color: #ECB57C;
+    margin-left: 30px;
+
+
+}
+#textThreeRight {
+    background-color: #837770;
+    margin-right: 30px;
+}
+
+.button {
+    background-color: #F6A44E;
+    font-size: 2rem;
+    padding: 15px;
+    border-radius: 30px;
+    
+}
 
 
 /* Section 4 */
