--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@
   display: flex;
   flex-direction: column;
   margin: 0px 10px;
+  background-color: #837870;
 }
 
 .sec2 #threecards .small_card .card_img {
@@ -51,6 +52,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-left: 10px;
 }
 
 .sec2 button {
