--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,7 @@ nav ul li a {
 
 .sec2 {
   /*   background-color: rgb(200, 249, 215); */
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -255,6 +256,7 @@ nav ul li a {
   font-weight: 700;
   letter-spacing: 5px;
   margin-bottom: 2%;
+  margin-top: 2%;
 }
 
 .sec2 #text_claim {
@@ -273,6 +275,14 @@ nav ul li a {
   margin-bottom: 2%;
 }
 
+@media only screen and (max-width: 900px) {
+  .sec2 #threecards {
+    /*     background-color: lightblue; */
+    flex-direction: column;
+    display: flex;
+  }
+}
+
 .sec2 #threecards .small_card {
   display: flex;
   flex-direction: column;
@@ -281,7 +291,7 @@ nav ul li a {
 }
 
 .sec2 #threecards .small_card .card_img {
-  width: 200px;
+  /*   width: 200px; */
 }
 
 .sec2 #threecards .small_card .card_text {
