--- a/styles.css
+++ b/styles.css
@@ -206,48 +206,7 @@ nav ul li a {
   align-items: center;
 }
 
-/* Section 3 */
-.grid-container {
-  color: #ffffff;
-  display: grid;
-  grid-template-columns: auto auto;
-}
-.grid-item {
-  border: none;
-}
 
-#leftImgThree,
-#rightImgThree {
-  padding: 0;
-}
-#firstImgThree {
-  margin-left: 30px;
-}
-#secondImgThree {
-  margin-right: 30px;
-}
-#textThreeLeft,
-#textThreeRight {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-#textThreeLeft {
-  background-color: #ecb57c;
-  margin-left: 30px;
-}
-#textThreeRight {
-  background-color: #837770;
-  margin-right: 30px;
-}
-
-.button {
-  background-color: #f6a44e;
-  font-size: 2rem;
-  padding: 15px;
-  border-radius: 30px;
-}
 
 .sec2 h2 {
   color: #f6a44e;
@@ -307,10 +266,82 @@ nav ul li a {
   padding: 5px;
   margin-bottom: 2%;
 }
+/* Section 3 */
+.grid-container {
+    color: #ffffff;
+    display: grid;
+    grid-template-columns: auto auto;
+    width: 100vw;
+  }
+  .grid-item {
+    border: none;
+  }
+  .imgThree {
+    width: 50vw;
+    height: auto;
+  }
+  
+  #textThreeLeft,
+  #textThreeRight {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .pThree {
+    text-wrap: wrap;
+    width: 25vw;
+    height: auto;
+    margin-top: 15px;
+    align-self: flex-start;
+    margin-left: 150px;
+  }
+ .hThreeThree {
+    align-self: flex-start;
+    margin-left: 150px;
+ }
+  #textThreeLeft {
+    background-color: #ecb57c;
+   
+  }
+  #textThreeRight {
+    background-color: #837770;
+    
+  }
+  
+  .button {
+    background-color: #f6a44e;
+    font-size: 2rem;
+    border-radius: 30px;
+    border: none;
+    color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 25px;
+    align-self: flex-start;
+    margin-left: 150px;
+  }
 
 /* Section 4 */
 
 /* Section 5 */
+.imgFive {
+    width: 100vw;
+    height: auto;
+}
+
+
+.lowerContainer {
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.textFive {
+    margin: auto;
+}
 
 /* Section 6 */
 
